qunit achievementsTest added

--- a/test/qunit/test.html
+++ b/test/qunit/test.html
@@ -13,10 +13,13 @@
   <script src="../../htdocs/js/lib/jquery-2.0.2.min.js"></script>
   <script src="lib/qunit.js"></script>
   
+  <script src="../../htdocs/js/game.js"></script>
   <script src="../../htdocs/js/game.functions.js"></script>
   <script src="../../htdocs/js/game.graphic.js"></script>
+  <script src="../../htdocs/js/game.achievements.js"></script>
   <script src="js/formatTimeTest.js"></script>
   <script src="js/updateLevelBarTest.js"></script>
+  <script src="js/achievementsTest.js"></script>
 
 </body>
 </html>
